adding /compose instruction

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,7 @@
 <%- include("partials/header") -%>
 
 <h1>Home</h1>
+<h4 style="color: #1ABC9C"><i>{ Type <b>'/compose'</b> in the URL to post a new blog }</i></h4><br>
 <p><%= startingContent %></p>
 <% console.log(newPosts) %>
 
