adding responsive navbar

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,6 +25,7 @@
 
 
 
+<!-- FOR LOOP CAN ALSO BE DONE IN THESE OLD SYNTAX -->
 
 <%# for(let i = 0; i<newPost.length; i++) { %>
    <%#  console.log(newPost[i].titlePost) %>
@@ -36,4 +37,5 @@
     <%# console.log(post.titlePost) %>
 <%# }) %>
 
+<!-- OR -->
 
